--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+    font-family: 'Times New Roman', Times, serif, sans-serif;
+    background-color:  #4169E1; /* Royal Blue */
     color: #333;
     margin: 0;
     padding: 0;
@@ -21,7 +21,7 @@ header {
 }
 
 header h1 {
-    color: #4CAF50;
+    color: #a7cee0;
 }
 
 .add-task {
