--- a/static/style.css
+++ b/static/style.css
@@ -59,7 +59,7 @@ header h1 {
 
 .task-list .task-card {
     border: 1px solid #ddd;
-    background: #fefefe;
+    background: #4169E1;
     border-radius: 8px;
     margin-bottom: 10px;
     padding: 15px;
