--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
         </section>
 
         <section class="task-list">
-            <h2>Tasks</h2>
+            <h2>Tasks (Total: {{ task_count }})</h2>
 
             {% if overdue_tasks %}
             <div class="task-section overdue-tasks">
